# ircam-vamp-extension

./: .gitlab-ci.yml  CMakeLists.txt  README.md
.github/workflows/: ci.yml
Example/: IvePluginExample.cpp  IvePluginExample.h
Patchs/: Add-IVE-support.patch
Source/: IvePluginAdapter.cpp  IvePluginAdapter.hpp  IvePluginExtension.hpp  IvePluginWrapper.cpp  IvePluginWrapper.hpp  ive.h
